# drf-pydantic-test

./: .gitignore  db.sqlite3  pyproject.toml
DjangoProject/: settings.py  urls.py
DjangoProject/casmal_test/: apps.py  models.py  serializers.py  utils.py  views.py
DjangoProject/casmal_test/migrations/: 0001_initial.py
DjangoProject/model_test/: apps.py  models.py  schemas.py  serializers.py  test.ipynb  views.py
DjangoProject/model_test/migrations/: 0001_initial.py  0002_author_remove_book_user_alter_book_author.py  0003_dataset_experiment.py
