[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["转眼春夏秋冬如烟 <50688376+shallow-dreamer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
djangorestframework = "^3.16.0"
django-ninja = "^1.4.1"
psycopg2 = "^2.9.10"
drf-yasg = "^1.21.10"
djangorestframework-camel-case = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
